[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://imgs/iconaMissileVerde.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Radar.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.721569, 0, 0, 1 )

[sub_resource type="StyleBoxLine" id=2]
color = Color( 1, 0, 0, 1 )
grow_begin = 2.0
grow_end = 2.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.12549, 0.858824, 0, 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 550.0
margin_right = 800.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 800.0
margin_bottom = 50.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 254.0
margin_top = 10.0
margin_right = 546.0
margin_bottom = 40.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/CenterContainer/HBoxContainer2"]
margin_right = 100.0
margin_bottom = 30.0

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/HBoxContainer2/MarginContainer"]
margin_right = 100.0
margin_bottom = 30.0

[node name="overheatBar" type="ProgressBar" parent="MarginContainer/CenterContainer/HBoxContainer2/MarginContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 10.0
grow_horizontal = 0
rect_min_size = Vector2( 100, 10 )
custom_styles/fg = SubResource( 1 )
step = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer2/MarginContainer/HBoxContainer"]
margin_top = 14.0
margin_right = 100.0
margin_bottom = 30.0
custom_styles/normal = SubResource( 2 )
text = "overheat"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/CenterContainer/HBoxContainer2"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 30.0

[node name="HBoxContainer2" type="VBoxContainer" parent="MarginContainer/CenterContainer/HBoxContainer2/MarginContainer2"]
margin_right = 100.0
margin_bottom = 30.0

[node name="lifeBar" type="ProgressBar" parent="MarginContainer/CenterContainer/HBoxContainer2/MarginContainer2/HBoxContainer2"]
margin_right = 100.0
margin_bottom = 10.0
grow_horizontal = 0
rect_min_size = Vector2( 100, 10 )
custom_styles/fg = SubResource( 3 )
step = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer2/MarginContainer2/HBoxContainer2"]
margin_top = 14.0
margin_right = 100.0
margin_bottom = 30.0
custom_styles/normal = SubResource( 2 )
text = "life"
align = 1

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/CenterContainer/HBoxContainer2"]
margin_left = 208.0
margin_right = 272.0
margin_bottom = 30.0

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer2/MarginContainer4"]
margin_top = 8.0
margin_right = 64.0
margin_bottom = 22.0
text = "Score: 0/6"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/CenterContainer/HBoxContainer2"]
margin_left = 276.0
margin_right = 292.0
margin_bottom = 30.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/HBoxContainer2/MarginContainer3"]
margin_right = 16.0
margin_bottom = 30.0

[node name="nMissili" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer2/MarginContainer3/HBoxContainer"]
margin_top = 8.0
margin_right = 16.0
margin_bottom = 22.0
text = "10"

[node name="Sprite" type="Sprite" parent="MarginContainer/CenterContainer/HBoxContainer2/MarginContainer3/HBoxContainer"]
position = Vector2( 31.954, 13.4543 )
texture = ExtResource( 2 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
visible = false
margin_left = -33.9096
margin_top = 390.867
margin_right = 316.09
margin_bottom = 740.867
rect_scale = Vector2( 0.75, 0.75 )
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 350, 350 )
transparent_bg = true
handle_input_locally = false
hdr = false
render_target_update_mode = 0
gui_disable_input = true

[node name="Radar" parent="ViewportContainer/Viewport" instance=ExtResource( 3 )]

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_right = 800.0
margin_bottom = 74.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer2"]
margin_right = 800.0
margin_bottom = 74.0

[node name="Label" type="Label" parent="MarginContainer2/CenterContainer"]
margin_left = 342.0
margin_top = 30.0
margin_right = 458.0
margin_bottom = 44.0
text = "Informazioni varie"
align = 1
